cmake_minimum_required(VERSION 3.1)

PROJECT(vulkan-sandbox CXX)

FIND_PACKAGE(Qt5Core 5.5 REQUIRED)
FIND_PACKAGE(Qt5Gui 5.5 REQUIRED)
FIND_PACKAGE(Qt5Widgets 5.5 REQUIRED)

IF("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
    FIND_PACKAGE(Qt5X11Extras 5.5 REQUIRED)
    SET(PROJECT_LIBRARIES ${VULKAN_LIBRARIES} ${Qt5X11Extras_LIBRARIES} -lvulkan-wrapper -lvulkan-engine)
ELSE()
    SET(PROJECT_LIBRARIES ${VULKAN_LIBRARIES} vulkan-wrapper vulkan-engine)
ENDIF()

SET(HEADER_FILES
    Test.h
    TestRenderScene.h
)

SET(SOURCE_FILES
    main.cpp

    Test.cpp
    TestRenderScene.cpp
)

INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS})

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH}/${OUTPUT_DIR_SUFFIX})

ADD_EXECUTABLE(${PROJECT_NAME}
    ${SOURCE_FILES}
    ${HEADER_FILES}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
    ${QT_LIBRARIES}
    ${Qt5Core_LIBRARIES}
    ${Qt5Gui_LIBRARIES}
    ${Qt5Widgets_LIBRARIES}
    ${PROJECT_LIBRARIES}
    -L${LIBRARY_OUTPUT_PATH} 
)
